--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="dist/output.css" rel="stylesheet">
+    <!-- <link href="assets/css/style.css" rel="stylesheet"> -->
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
@@ -56,19 +58,19 @@
 
         <div class="news smallblock">
             <div class="newsblock">
-                <div class="newsblock__image"></div>
+                <div class="newsblock__image"><img src="assets/img/12.jpg" alt=""></div>
                 <div class="newsblock__desc">
                     Урок патриотического воспитания в средней школе №11 Твери
                 </div>
             </div>
             <div class="newsblock">
-                <div class="newsblock__image"></div>
+                <div class="newsblock__image"><img src="assets/img/13.jpg" alt=""></div>
                 <div class="newsblock__desc">
                     Выставка в детском лагере «Романтик» под Тверью
                 </div>
             </div>
             <div class="newsblock">
-                <div class="newsblock__image"></div>
+                <div class="newsblock__image"><img src="assets/img/11.jpg" alt=""></div>
                 <div class="newsblock__desc">
                     Празднование 92-летия Воздушно-десантных войск
                 </div>
