--- a/index.html
+++ b/index.html
@@ -62,18 +62,21 @@
                 <div class="newsblock__desc">
                     Урок патриотического воспитания в средней школе №11 Твери
                 </div>
+                <button class="btn">Подробнее</button>
             </div>
             <div class="newsblock">
                 <div class="newsblock__image"><img src="assets/img/13.jpg" alt=""></div>
                 <div class="newsblock__desc">
                     Выставка в детском лагере «Романтик» под Тверью
                 </div>
+                <button class="btn">Подробнее</button>
             </div>
             <div class="newsblock">
                 <div class="newsblock__image"><img src="assets/img/11.jpg" alt=""></div>
                 <div class="newsblock__desc">
                     Празднование 92-летия Воздушно-десантных войск
                 </div>
+                <button class="btn">Подробнее</button>
             </div>
         </div>
 
@@ -118,16 +121,21 @@
                 <a href="/">
                     <div class="exhibit__img-overlay"></div>
                 </a>
-                <img src="https://sun9-82.userapi.com/impg/3GQ3Z_sggnjPoQ1hhWA59RyJxzgiLBtM18XHcw/zGFt_I7JDHM.jpg?size=1280x853&quality=96&sign=96c79293b8d7fe6ecde3f8139e292518&type=album" alt="">
+                <img src="assets/img/IMG_7195-168.jpg" alt="">
             </div>
             <div class="exhibit__desc">
-                <h2>Интерактивная выставка «Четыре эпохи воинской славы Твери»</h2>
-                <p>Более 8 лет в ТРО МОО «Союз десантников» действует интерактивная выставка «4 эпохи воинской славы Твери».</p>
-                <p>Выставка создана в 2017 году Тверской областной организацией по делам молодежи «Молодежная политика-ХХI век» и Тверским региональным отделением Межрегиональной общественной организации «Союз десантников».</p>
+                <h2>Содействие и патриотическое воспитание</h2>
+                <p>ТРО МОО «Союз десантников» активно сотрудничает с другими ветеранскими организациями, действующими на территории региона. Совместно проводятся военно-патриотические мероприятия для молодежи</p>
             </div>
         </div>
 
-        <footer></footer>
+        <footer>
+            <div class="footer__contact">
+                <p>Тверское региональное отделение Межрегиональной общественной организации «Союз десантников»</p>
+                <p>+7 (985) 813-10-32</p>
+                <p>улица Горького, 128, Тверь</p>
+            </div>
+        </footer>
     </div>
 </body>
 
