--- a/inner.html
+++ b/inner.html
@@ -22,18 +22,24 @@
         <header class="header shadow-lg">
             <nav class="topnav shadow-lg">
                 <a href="">Отделение</a>
-                <a href="">Проекты</a>
-                <a class="logoLink" href=""><img class="logoImg" src="assets/img/logo.png" alt=""></a>
+                <a href="4tver.html">Проекты</a>
+                <a class="logoLink" href="index.html"><img class="logoImg" src="assets/img/logo.png" alt=""></a>
                 <a href="">Новости</a>
                 <a href="">Контакты</a>
             </nav>
         </header>
 
         <div class="inner__header smallblock">
-            <h1>О Союзе</h1>
+            <div class="inner__image">
+                <img src="assets/img/IMG_7173-54.jpg" alt="">
+            </div>
+            <div class="inner__desc">
+            <h1>О союзе</h1>
+            <h2>Деятельность тверского отделения</h2>
+        </div>
         </div>
 
-        <article class="content">
+        <article class="content flex-col md:flex-row">
             <div class="content__article">
                 <h2>Тверское региональное отделение Межрегиональной общественной организации «Союз десантников»</h2>
 
