--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
         <header class="header shadow-lg">
             <nav class="topnav shadow-lg">
-                <a href="">Отделение</a>
-                <a href="">Проекты</a>
+                <a href="inner.html">Отделение</a>
+                <a href="4tver.html">Проекты</a>
                 <a class="logoLink" href=""><img class="logoImg" src="assets/img/logo.png" alt=""></a>
                 <a href="">Новости</a>
                 <a href="">Контакты</a>
