--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <p>Выставка создана в 2017 году Тверской областной организацией по делам молодежи «Молодежная политика-ХХI век» и Тверским региональным отделением Межрегиональной общественной организации «Союз десантников».</p>
             </div>
             <div class="exhibit__img">
-                <a href="">
+                <a href="4tver.html">
                     <div class="exhibit__img-overlay"></div>
                 </a>
                 <img src="https://sun9-82.userapi.com/impg/3GQ3Z_sggnjPoQ1hhWA59RyJxzgiLBtM18XHcw/zGFt_I7JDHM.jpg?size=1280x853&quality=96&sign=96c79293b8d7fe6ecde3f8139e292518&type=album" alt="">
@@ -118,7 +118,7 @@
 
         <div class="exhibit smallblock">
             <div class="exhibit__img">
-                <a href="/">
+                <a href="inner.html">
                     <div class="exhibit__img-overlay"></div>
                 </a>
                 <img src="assets/img/IMG_7195-168.jpg" alt="">
