--- a/inner.html
+++ b/inner.html
@@ -46,12 +46,12 @@
                 <p>Организация действует на территории Тверской области с 2005 года и объединяет более 800 человек ветеранов-десантников Тверской области.</p>
                 <p>Председатель отделения, член Центрального Совета МОО «Союз десантников» – гвардии полковник Савельев Андрей Станиславович.</p>
                 <p>При поддержке организации в Твери и области проводятся различные мероприятия военно-патриотической и спортивной направленности – фестивали исторической реконструкции, городские праздники, спортивные состязания.</p>
-                <p>Неизменно ТРО МОО «Союз десантников» остается в числе организаторов одного из крупнейших праздников города – Дня ВДВ. Кроме того, актив организации способствует проведению таких праздников как День освобождения Калинина от немецко-фашистских
+                <p>Неизменно ТРО МОО «Союз десантников» остается в числе <strong>организаторов одного из крупнейших праздников города – Дня ВДВ</strong>. Кроме того, актив организации способствует проведению таких праздников как День освобождения Калинина от немецко-фашистских
                     захватчиков, День Российской армии, День Победы и других.</p>
-                <p>При поддержке ТРО МОО «Союз десантников» в Твери активно развивается музей военной техники под открытым небом в парке Победы. Здесь, благодаря усилиям, в том числе, членов организации, установлены образцы военной техники – танки Т-34 и
+                <p>При поддержке ТРО МОО «Союз десантников» в Твери активно развивается <strong>музей военной техники под открытым небом в парке Победы</strong>. Здесь, благодаря усилиям, в том числе, членов организации, установлены образцы военной техники – танки Т-34 и
                     Т-80, установка ИСУ-152, гаубицы М-50, истребитель МиГ-25 и БТР-60ПБ.</p>
                 <p>ТРО МОО «Союз десантников» активно сотрудничает с другими ветеранскими организациями, действующими на территории региона. Совместно проводятся военно-патриотические мероприятия для молодежи.</p>
-                <p>В штабе организации имеется собственная интерактивная выставка «4 эпохи воинской славы Твери». Для школьников здесь проводят экскурсии, в ходе которых рассказывают о четырех исторических эпохах, прославивших русских воинов. Особенность
+                <p>В штабе организации имеется собственная <a href="4tver.html"><strong>интерактивная выставка «4 эпохи воинской славы Твери»</strong></a>. Для школьников здесь проводят экскурсии, в ходе которых рассказывают о четырех исторических эпохах, прославивших русских воинов. Особенность
                     выставки в том, что все модели вооружения гости десантников могут рассмотреть из собственных рук, также гости могут примерить исторические доспехи.</p>
             </div>
             <aside class="sidebar">
