--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
                 </div>
                 <a class="btn" href="newspost.html">Подробнее</a>
             </div>
-            <div class="newsblock" data-aos="zoom-in">
+            <div class="newsblock" data-aos="zoom-in" data-aos-delay="50">
                 <div class="newsblock__image"><img src="assets/img/13.jpg" alt=""></div>
                 <div class="newsblock__desc">
                     Выставка в детском лагере «Романтик» под Тверью
                 </div>
                 <a class="btn" href="newspost.html">Подробнее</a>
             </div>
-            <div class="newsblock" data-aos="zoom-in">
+            <div class="newsblock" data-aos="zoom-in" data-aos-delay="100">
                 <div class="newsblock__image"><img src="assets/img/11.jpg" alt=""></div>
                 <div class="newsblock__desc">
                     Празднование 92-летия Воздушно-десантных войск
