--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
         </div>
 
         <div class="stats smallblock flex-col md:flex-row">
-            <div class="stats__counter">
+            <div class="stats__counter" data-aos="fade-in">
                 <span>Нам более</span>
                 <p>17</p>
                 <span>лет</span>
             </div>
-            <div class="stats__counter">
+            <div class="stats__counter"d ata-aos="fade-in" data-aos-delay="50">
                 <span>Более</span>
                 <p>800</p>
                 <span>человек</span>
             </div>
-            <div class="stats__counter">
+            <div class="stats__counter" data-aos="fade-in" data-aos-delay="100">
                 <span>Свыше</span>
                 <p>1000</p>
                 <span>мероприятий</span>
