--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
         <div class="hero">
             <div class="hero__main">
-                <h1 class="hero__slogan">
+                <h1 class="hero__slogan" data-aos="slide-left">
                     Тверское региональное отделение МОО «Союз десантников»
                 </h1>
-                <h3 class="hero__slogan-sub">Никто, кроме нас!</h3>
+                <h3 class="hero__slogan-sub" data-aos="slide-right">Никто, кроме нас!</h3>
             </div>
         </div>
 
