--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
         </div>
 
         <div class="target smallblock flex-col md:flex-row">
-            <div class="target_img w-auto md:w-1/2">
+            <div class="target_img w-auto md:w-1/2" data-aos="fade-in">
                 <img src="assets/img/IMG_7173-54.jpg" alt="">
             </div>
-            <div class="target__desc w-auto md:w-1/2">
+            <div class="target__desc w-auto md:w-1/2" data-aos="fade-in">
                 <p><strong>Цели и задачи Межрегиональной общественной организации
                 «Союз десантников»</strong>
                 </p>
@@ -102,7 +102,7 @@
         </div>
 
         <div class="exhibit smallblock flex-col md:flex-row">
-            <div class="exhibit__desc">
+            <div class="exhibit__desc" data-aos="slide-left" data-aos-duration="1000">
                 <h2>Интерактивная выставка «Четыре эпохи воинской славы Твери»</h2>
                 <p>Более 8 лет в ТРО МОО «Союз десантников» действует интерактивная выставка «4 эпохи воинской славы Твери».</p>
                 <p>Выставка создана в 2017 году Тверской областной организацией по делам молодежи «Молодежная политика-ХХI век» и Тверским региональным отделением Межрегиональной общественной организации «Союз десантников».</p>
@@ -116,12 +116,12 @@
         </div>
 
         <div class="media smallblock">
-            <div class="mediablock"><img src="assets/img/1.jpg" alt=""></div>
-            <div class="mediablock"><img src="assets/img/2.jpg" alt=""></div>
-            <div class="mediablock"><img src="assets/img/3.jpg" alt=""></div>
-            <div class="mediablock"><img src="assets/img/4.jpg" alt=""></div>
-            <div class="mediablock"><img src="assets/img/IMG_3057-85.jpg" alt=""></div>
-            <div class="mediablock"><img src="assets/img/IMG_2994-75.jpg" alt=""></div>
+            <div class="mediablock" data-aos="fade-in"><img src="assets/img/1.jpg" alt=""></div>
+            <div class="mediablock" data-aos="fade-in"><img src="assets/img/2.jpg" alt=""></div>
+            <div class="mediablock" data-aos="fade-in"><img src="assets/img/3.jpg" alt=""></div>
+            <div class="mediablock" data-aos="fade-in"><img src="assets/img/4.jpg" alt=""></div>
+            <div class="mediablock" data-aos="fade-in"><img src="assets/img/IMG_3057-85.jpg" alt=""></div>
+            <div class="mediablock" data-aos="fade-in"><img src="assets/img/IMG_2994-75.jpg" alt=""></div>
         </div>
 
         <div class="exhibit smallblock flex-col md:flex-row">
@@ -131,7 +131,7 @@
                 </a>
                 <img src="assets/img/IMG_7195-168.jpg" alt="">
             </div>
-            <div class="exhibit__desc">
+            <div class="exhibit__desc" data-aos="slide-right" data-aos-duration="1000">
                 <h2>Содействие и патриотическое воспитание</h2>
                 <p>ТРО МОО «Союз десантников» активно сотрудничает с другими ветеранскими организациями, действующими на территории региона. Совместно проводятся военно-патриотические мероприятия для молодежи</p>
             </div>
