--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
-        startEvent: 'DOMContentLoaded'
+        startEvent: 'DOMContentLoaded',
+        once: true
     });
   </script>
     <script src="assets/js/scripts.js"></script>
