--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
   <script>
     AOS.init({
         startEvent: 'DOMContentLoaded',
-        once: true
+        once: true,
+        duration: 1000
     });
   </script>
     <script src="assets/js/scripts.js"></script>
