--- a/index.html
+++ b/index.html
@@ -137,6 +137,13 @@
             </div>
         </div>
 
+        <div class="textblock smallblock flex-col md:flex-row"">
+            <h2>Деятельность организации</h2>
+            <p>ТРО МОО «Союз десантников» активно сотрудничает с другими ветеранскими организациями, действующими на территории региона. 
+                Совместно проводятся военно-патриотические мероприятия для молодежи.
+            </p>
+        </div>
+
         <footer>
             <div class="footer__contact">
                 <p>Тверское региональное отделение Межрегиональной общественной организации «Союз десантников»</p>
