--- a/index.html
+++ b/index.html
@@ -138,10 +138,12 @@
         </div>
 
         <div class="textblock smallblock flex-col md:flex-row"">
+            <div class="exhibit__desc" data-aos="slide-right" data-aos-duration="1000">
             <h2>Деятельность организации</h2>
             <p>ТРО МОО «Союз десантников» активно сотрудничает с другими ветеранскими организациями, действующими на территории региона. 
                 Совместно проводятся военно-патриотические мероприятия для молодежи.
             </p>
+        </div>
         </div>
 
         <footer>
