--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
 
         <div class="textblock smallblock flex-col md:flex-row"">
-            <div class="exhibit__desc" data-aos="slide-right" data-aos-duration="1000">
+            <div class="target__desc w-auto md:w-1/2" data-aos="fade-in">
             <h2>Деятельность организации</h2>
             <p>ТРО МОО «Союз десантников» активно сотрудничает с другими ветеранскими организациями, действующими на территории региона. 
                 Совместно проводятся военно-патриотические мероприятия для молодежи.
