--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <title>«Союз десантников» Тверское региональное отделение</title>
 </head>
 
@@ -102,7 +103,7 @@
         </div>
 
         <div class="exhibit smallblock flex-col md:flex-row">
-            <div class="exhibit__desc" data-aos="slide-right" data-aos-duration="1000">
+            <div class="exhibit__desc" data-aos="fade-in" data-aos-duration="1000">
                 <h2>Интерактивная выставка «Четыре эпохи воинской славы Твери»</h2>
                 <p>Более 8 лет в ТРО МОО «Союз десантников» действует интерактивная выставка «4 эпохи воинской славы Твери».</p>
                 <p>Выставка создана в 2017 году Тверской областной организацией по делам молодежи «Молодежная политика-ХХI век» и Тверским региональным отделением Межрегиональной общественной организации «Союз десантников».</p>
@@ -131,37 +132,35 @@
                 </a>
                 <img src="assets/img/IMG_7195-168.jpg" alt="">
             </div>
-            <div class="exhibit__desc" data-aos="slide-left" data-aos-duration="1000">
+            <div class="exhibit__desc" data-aos="fade-in" data-aos-duration="1000">
                 <h2>Содействие и патриотическое воспитание</h2>
                 <p>ТРО МОО «Союз десантников» активно сотрудничает с другими ветеранскими организациями, действующими на территории региона. Совместно проводятся военно-патриотические мероприятия для молодежи</p>
             </div>
         </div>
 
-        <div class="textblock smallblock flex-col md:flex-row"">
+        <div class="textblock smallblock flex-col md:flex-row" ">
             <div class="target__desc data-aos="fade-in">
             <h2>Деятельность организации</h2>
-            <p>ТРО МОО «Союз десантников» активно сотрудничает с другими ветеранскими организациями, действующими на территории региона. 
-                Совместно проводятся военно-патриотические мероприятия для молодежи.
+            <p>ТРО МОО «Союз десантников» активно сотрудничает с другими ветеранскими организациями, действующими на территории региона. Совместно проводятся военно-патриотические мероприятия для молодежи.
             </p>
         </div>
-        </div>
-
-        <footer>
-            <div class="footer__contact">
-                <p>Тверское региональное отделение Межрегиональной общественной организации «Союз десантников»</p>
-                <p>+7 (985) 813-10-32</p>
-                <p>улица Горького, 128, Тверь</p>
-            </div>
-        </footer>
     </div>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
-    AOS.init({
-        startEvent: 'DOMContentLoaded',
-        once: true,
-        duration: 1000
-    });
-  </script>
+
+    <footer>
+        <div class="footer__contact">
+            <p>Тверское региональное отделение Межрегиональной общественной организации «Союз десантников»</p>
+            <p>+7 (985) 813-10-32</p>
+            <p>улица Горького, 128, Тверь</p>
+        </div>
+    </footer>
+    </div>
+    <script>
+        AOS.init({
+            startEvent: 'DOMContentLoaded',
+            once: true,
+            duration: 1000
+        });
+    </script>
     <script src="assets/js/scripts.js"></script>
 </body>
 
