--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
         </div>
 
         <div class="media smallblock">
-            <div class="mediablock" data-aos="fade-in"><img src="assets/img/1.jpg" alt=""></div>
-            <div class="mediablock" data-aos="fade-in"><img src="assets/img/2.jpg" alt=""></div>
-            <div class="mediablock" data-aos="fade-in"><img src="assets/img/3.jpg" alt=""></div>
-            <div class="mediablock" data-aos="fade-in"><img src="assets/img/4.jpg" alt=""></div>
-            <div class="mediablock" data-aos="fade-in"><img src="assets/img/IMG_3057-85.jpg" alt=""></div>
-            <div class="mediablock" data-aos="fade-in"><img src="assets/img/IMG_2994-75.jpg" alt=""></div>
+            <div class="mediablock" data-aos="fade-in"><img draggable="true" class="media__img" src="assets/img/1.jpg" alt=""></div>
+            <div class="mediablock" data-aos="fade-in"><img class="media__img" src="assets/img/2.jpg" alt=""></div>
+            <div class="mediablock" data-aos="fade-in"><img class="media__img" src="assets/img/3.jpg" alt=""></div>
+            <div class="mediablock" data-aos="fade-in"><img class="media__img" src="assets/img/4.jpg" alt=""></div>
+            <div class="mediablock" data-aos="fade-in"><img class="media__img" src="assets/img/IMG_3057-85.jpg" alt=""></div>
+            <div class="mediablock" data-aos="fade-in"><img class="media__img" src="assets/img/IMG_2994-75.jpg" alt=""></div>
         </div>
 
         <div class="exhibit smallblock flex-col md:flex-row">
@@ -162,6 +162,7 @@
         });
     </script>
     <script src="assets/js/scripts.js"></script>
+    <script src="assets/js/photos.js"></script>
 </body>
 
 </html>
