--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+    <div class="shadow"></div>
     <div class="wrapper">
         <nav class="topnav-mobile md:hidden">
             <div class="mobile__button"></div>
