--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li><a href="contact.html">Контакты</a></li>
             </ul>
         </nav>
+
         <header class="header shadow-lg hidden md:block">
             <nav class="topnav shadow-lg">
                 <a href="inner.html">Отделение</a>
@@ -40,6 +41,7 @@
 
         <div class="hero">
             <div class="hero__main">
+                <img src="assets/img/tvo.png" alt="" class="gerb" data-aos="fade-in">
                 <h1 class="hero__slogan" data-aos="slide-left">
                     Тверское региональное отделение МОО «Союз десантников»
                 </h1>
@@ -154,6 +156,7 @@
         </div>
     </footer>
     </div>
+    
     <script>
         AOS.init({
             startEvent: 'DOMContentLoaded',
